<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/settingsContainer"
        android:paddingTop="@dimen/keyline_2"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.wordsdict.android.util.widget.BannerCardView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_2"
                android:layout_marginEnd="@dimen/keyline_2"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_marginBottom="@dimen/keyline_4"
                app:cardElevation="2dp"
                app:cardCornerRadius="@dimen/keyline_2"
                app:cardBackgroundColor="?colorSurface"
                />

            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/nightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_night_mode_title"
                />

            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Orientation lock"
                app:desc="None"
                />


            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_sign_out_title"
                app:desc="@string/settings_sign_out_default_desc"
                />

            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_about_title"
                app:desc="@string/settings_about_desc"
                />

            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_contact_title"
                app:desc="@string/settings_contact_desc"
                />

            <com.wordsdict.android.util.widget.CheckPreferenceView
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_developer_title"
                app:desc="@string/settings_developer_desc"
                app:showDivider="false"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?actionBarSize"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/keyline_3"
            android:layout_marginRight="@dimen/keyline_3"
            app:layout_scrollFlags="scroll|enterAlways"
            >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/navigationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_gravity="left|center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_round_arrow_left_24px"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:textAppearance="?textAppearanceHeadline5"
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_2"
                android:text="Settings"
                />

            <View
                android:layout_width="72dp"
                android:layout_height="2dp"
                android:background="@drawable/title_underline_background"
                android:layout_marginTop="@dimen/keyline_3"/>

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>