<?xml version="1.0" encoding="utf-8"?>
<space.narrate.words.android.ui.widget.ScrimmedFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrim_frame"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?colorScrim">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator_layout"
        android:background="?android:windowBackground">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:textAppearance="?textAppearanceBody1"
                    android:id="@+id/aboutBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/keyline_3"
                    android:text="@string/about_header_body" />

                <space.narrate.words.android.ui.widget.CheckPreferenceView
                    android:id="@+id/version_preference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="Version"
                    />

                <space.narrate.words.android.ui.widget.CheckPreferenceView
                    android:id="@+id/third_party_libs_preference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/about_third_party_lib_title"
                    app:desc="@string/about_third_party_lib_desc"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            app:layout_behavior=".ui.widget.ElasticAppBarBehavior"
            app:elevation="@dimen/plane_00">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="?actionBarSize"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/keyline_3"
                android:layout_marginRight="@dimen/keyline_3"
                app:layout_scrollFlags="scroll|enterAlways"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/navigation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="?selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_round_arrow_down_24px"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:textAppearance="?textAppearanceHeadline5"
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:text="@string/about_title"
                    />

                <View
                    android:layout_width="72dp"
                    android:layout_height="2dp"
                    android:background="@drawable/title_underline_background"
                    android:layout_marginTop="@dimen/keyline_3"/>

            </LinearLayout>


        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</space.narrate.words.android.ui.widget.ScrimmedFrameLayout>