<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?android:windowBackground">

    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/search_min_peek_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/constraint_container"
            android:layout_marginTop="@dimen/keyline_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/trending_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:paddingStart="@dimen/keyline_3"
                android:paddingTop="@dimen/keyline_3"
                android:paddingEnd="@dimen/keyline_3"
                android:paddingBottom="@dimen/keyline_3"
                app:layout_constraintBottom_toTopOf="@+id/recent_container"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/trending_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_trending"
                    android:textAppearance="?textAppearanceHeadline5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/trending_preview_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="pluralism, calm, compeer, equal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recent_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:paddingStart="@dimen/keyline_3"
                android:paddingTop="@dimen/keyline_3"
                android:paddingEnd="@dimen/keyline_3"
                android:paddingBottom="@dimen/keyline_3"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/favorite_container"
                app:layout_constraintTop_toBottomOf="@+id/trending_container">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recent_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_recent"
                    android:textAppearance="?textAppearanceHeadline5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recent_preview_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="quiescent, apathy, epigram" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:paddingStart="@dimen/keyline_3"
                android:paddingTop="@dimen/keyline_3"
                android:paddingEnd="@dimen/keyline_3"
                android:paddingBottom="@dimen/keyline_3"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/recent_container"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/favorite_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_favorite"
                    android:textAppearance="?textAppearanceHeadline5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/favorite_preview_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?textAppearanceBody2"
                    tools:text="egalitarianism, equanimity, solicitude, quint..." />

            </LinearLayout>

            <space.narrate.words.android.ui.widget.ProgressUnderlineView
                android:id="@+id/view"
                android:layout_width="72dp"
                android:layout_height="2dp"
                app:trackColor="?colorOnBackgroundLowEmphasis"
                app:indicatorColor="?colorPrimary"
                android:layout_marginLeft="@dimen/keyline_3"
                android:layout_marginRight="@dimen/keyline_3"
                android:layout_marginTop="@dimen/keyline_3"
                android:layout_marginBottom="@dimen/keyline_3"
                app:layout_constraintBottom_toTopOf="@+id/settings_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_container"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingLeft="@dimen/keyline_3"
                android:paddingTop="@dimen/keyline_3"
                android:paddingRight="@dimen/keyline_3"
                android:paddingBottom="@dimen/keyline_3"
                android:text="Settings"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/status_bar_scrim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:windowBackground"
        android:layout_gravity="top"/>

</FrameLayout>
